--- a/Day_22 - Day_25/pubspec.yaml
+++ b/Day_22 - Day_25/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.3.0
   webview_flutter: ^4.3.0
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
